# tp-calculator

./: .gitignore  CMakeLists.txt  main.cpp  resources.qrc
.github/workflows/: build-release.yml  build-snapshot.yml
icons/: icon.icns
logic/: Settings.cpp  Settings.h  calculator_engine.cpp  calculator_engine.h
logic/core/: ExpressionParser.cpp  ExpressionParser.h
logic/history/: HistoryDatabase.cpp  HistoryDatabase.h  HistoryEntry.cpp  HistoryEntry.h
ui/: BasicPage.cpp  BasicPage.h  HistoryPage.cpp  HistoryPage.h  MainWindow.cpp  MainWindow.h  SettingsPage.cpp  SettingsPage.h  main_window.cpp  main_window.h
views/: BasicPage.ui  HistoryPage.ui  MainWindow.ui  SettingsPage.ui  main_window.ui
